--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body>
-  <div class="h-screen overflow-hidden relative bg-slate-900 bg-[url('/src/img/bg.jpeg')] bg-center bg-cover bg-no-repeat bg-fixed">
+  <div class="h-screen overflow-hidden relative bg-slate-900 bg-[url('/road-map-win-travel/src/img/bg.jpeg')] bg-center bg-cover bg-no-repeat bg-fixed">
     <div class="text-3xl h-fit w-fit z-10 absolute m-auto left-0 right-0 top-20 text-white pt-10">
         <p>
             LLC "WIN-TRAVEl"
@@ -22,7 +22,7 @@
             Дорожную карту Иссык-Куль
         </p>
     </div>
-    <img src="/src/img/WIN.png"  data-value="5" class="logo absolute inset-0 w-80 m-auto z-10" alt="">
+    <img src="/road-map-win-travel/src/img/WIN.png"  data-value="5" class="logo absolute inset-0 w-80 m-auto z-10" alt="">
     <div class="h-screen bg-black opacity-25 absolute inset-0 m-auto w-full z-0"></div> 
   </div>
   <div x-data="{ open: false }" class="p-20 relative bg-gray-100">
@@ -43,16 +43,16 @@
         </div>
     </div>
   </div>
-  <div class="p-20 flex flex-col gap-5 items-end bg-[url('/src/img/_MG_6093-94.jpg')] bg-center bg-no-repeat bg-cover bg-fixed">
+  <div class="p-20 flex flex-col gap-5 items-end bg-[url('/road-map-win-travel/src/img/_MG_6093-94.jpg')] bg-center bg-no-repeat bg-cover bg-fixed">
     <h1 class="text-3xl w-fit mb-10 text-white">Туризм в Кыргызстане: это горы</h1>
     <div class="flex flex-row-reverse items-center h-fit bg-white w-[1200px] rounded-xl overflow-hidden ">
-        <img src="/src/img/_MG_6349 - 6351rsz.jpg" class="w-1/2" data-value="5" alt="">
+        <img src="/road-map-win-travel/src/img/_MG_6349 - 6351rsz.jpg" class="w-1/2" data-value="5" alt="">
             <p class="p-4 bg-white w-1/2 right-[-100%]">
                 Туризм в Кыргызстане является одним из приоритетных и перспективных сфер экономики, так как Киргизия – это ослепительно яркое солнце и глубокие, неповторимо сказочные ущелья, великолепные песчаные пляжи с чистейшим горно-морским воздухом и мягким климатом. Это также страна плодородных зеленых долин и альпийских лугов с удивительно многообразной россыпью цветов, край неприступных и снежных перевалов, родина богатейших термоминеральных лечебных источников, дарящих человеку красоту и здоровье.
             </p>
     </div>
     <div class="flex items-center h-fit bg-white w-[1200px] rounded-xl overflow-hidden ">
-        <img src="/src/img/DSC00072.JPG" class="w-1/2" data-value="5" alt="">
+        <img src="/road-map-win-travel/src/img/DSC00072.JPG" class="w-1/2" data-value="5" alt="">
             <p class="p-4 bg-white w-1/2 right-[-100%]">
                 Территория Киргизии простирается на 920 километров в восточно-западном направлении и на чуть более 450 километров в северо-южном направлении, составляя почти 200 тысяч квадратных километров. Много это или мало, можно представить по следующему сравнению: на территории Киргизия уместились бы Бельгия, Дания, Швейцария, Нидерланды, Словения и Черногория вместе взятые.
             </p>
@@ -108,7 +108,7 @@
             </span>
         </div> 
         <div class="lot  h-80 p-5 w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
-            <img class="w-48" src="/src/img/лого.png" alt="">
+            <img class="w-48" src="/road-map-win-travel/src/img/лого.png" alt="">
             <span class="w-full">
                 <p>Элитный туристический комплекс</p>
                 <p class="text-3xl">Win Travel</p>
@@ -121,8 +121,8 @@
                 <p class="text-3xl">Три короны</p>
             </span>
         </div>
-        <a href="/src/pgf/Горнолыжная база.pdf" target="_blank"><div class="lot  h-80 p-5 w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
-            <img class="w-36" src="/src/img/ARTHUR.png" alt="">
+        <div class="lot  h-80 p-5 w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+            <img class="w-36" src="/road-map-win-travel/src/img/ARTHUR.png" alt="">
             <span class="w-full">
                 <p>Каракол</p>
                 <p class="text-3xl">Горнолыжная база</p>
@@ -137,7 +137,7 @@
             </span>
         </div>
         <div class="lot  h-80 p-5 w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
-            <img class="w-40" src="/src/img/ISA.png" alt="">
+            <img class="w-40" src="/road-map-win-travel/src/img/ISA.png" alt="">
             <span class="w-full">
                 <p>Тосор</p>
                 <p>Элитный туристический комплекс</p>
@@ -145,7 +145,7 @@
             </span>
         </div>
         <div class="lot  h-80 p-5 w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
-            <img class="w-40" src="/src/img/ethno.png" alt="">
+            <img class="w-40" src="/road-map-win-travel/src/img/ethno.png" alt="">
             <span class="w-full">
                 <p>урочище Барскаун</p>
                 <p>Этно-городок</p>
@@ -153,7 +153,7 @@
             </span>
         </div>
         <div class="lot  h-80 p-5 w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
-            <img class="w-32" src="/src/img/edel.png" alt="">
+            <img class="w-32" src="/road-map-win-travel/src/img/edel.png" alt="">
             <span class="w-full">
                 <p>село Барскаун</p>
                 <p>Порт</p>
@@ -191,7 +191,7 @@
             </span>
         </div>
     </div>
-  <script type="text/javascript" src="/src/js/vanilla-tilt.min.js"></script>
+  <script type="text/javascript" src="/road-map-win-travel/src/js/vanilla-tilt.min.js"></script>
   <script type="text/javascript">
     document.addEventListener("mousemove", parallax);
     function parallax(e){
