--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;700&family=Cormorant&family=Raleway&display=swap" rel="stylesheet">
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <title>Дорожная Карта</title>
 </head>
 <body>
   <div class="h-screen overflow-hidden relative bg-slate-900 bg-[url('/road-map-win-travel/src/img/bg.jpeg')] bg-center bg-cover bg-no-repeat bg-fixed">
