--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </p>
     </div>
     <div class="flex flex-col lg:flex-row items-center h-fit bg-white md:w-[80%] rounded-xl overflow-hidden ">
-        <img src=/road-map-win-travel/src/img/lake-card-2.webp" class="lg:w-1/2" data-value="5" alt="">
+        <img src="/road-map-win-travel/src/img/lake-card-2.webp" class="lg:w-1/2" data-value="5" alt="">
             <p class="p-3 lg:p-4 text-xs sm:text-sm md:text-base bg-white lg:w-1/2">
                 Основной природной достопримечательностью региона является высокогорное озеро Иссык-Куль: <br>
 Площадь бассейна озера составляет 22080 тыс. кв. м, длина -178 км, ширина -60 км, глубина -668 м, объем воды -1738 куб. км. <br>
@@ -80,7 +80,7 @@
             </p>
     </div>
     <div class="flex flex-col lg:flex-row-reverse items-center h-fit bg-white md:w-[80%] rounded-xl overflow-hidden ">
-        <img src=/road-map-win-travel/src/img/lake-card-3.webp" class="lg:w-1/2" data-value="5" alt="">
+        <img src="/road-map-win-travel/src/img/lake-card-3.webp" class="lg:w-1/2" data-value="5" alt="">
             <p class="p-3 lg:p-4 text-xs sm:text-sm md:text-base bg-white lg:w-1/2">
                 Кыргызская Республика богата на водные ресурсы. Так, в стране насчитывается около 3 тысяч тысяч озер, при этом их общая площадь составляет 6,84 тысячи квадратных километров. Самое значительное из них – называемое «Центрально-азиатской жемчужиной» невероятно красивое озеро Иссык-Куль (в пер. с кыргызского языка означает «теплое озеро») – является одним из самых больших и глубоководных высокогорных озер на Земле. Несмотря на то, что озеро расположено на высоте более чем 1600 метров над уровнем моря, «кыргызская жемчужина» не замерзает даже в самые холодные дни зимы и является уникальной курортной зоной. Все это предопределило, что само выражение «озеро Иссык-Куль» стало самым узнаваемым туристическим брендом Киргизии.
 
@@ -89,20 +89,20 @@
   </div>
   <div class="flex flex-wrap gap-12 items-center justify-center text-white bg-white p-12">
         <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
-            <img class="w-1/2 lg:w-1/2 lg:w-32" src=/road-map-win-travel/src/img/airport.webp" alt="">
+            <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/airport.webp" alt="">
             <span class="w-full">
                 <p class="text-lg md:text-3xl">Аэропорт</p>
             </span>
         </div>
         <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
-            <img class="w-1/2 lg:w-32" src=/road-map-win-travel/src/img/bishkek.webp" alt="">
+            <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/bishkek.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Бишкек</p>
                 <p class="text-lg md:text-3xl">Мини мэр</p>
             </span>
         </div>
         <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
-            <img class="w-1/2 lg:w-32" src=/road-map-win-travel/src/img/boom.webp" alt="">
+            <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/boom.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Боомское ущелье</p>
                 <p class="text-lg md:text-3xl">Фуд-зона</p>
@@ -116,7 +116,7 @@
             </span>
         </div>
         <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
-            <img class="w-1/2 lg:w-48" src=/road-map-win-travel/src/img/three-crown.webp" alt="">
+            <img class="w-1/2 lg:w-48" src="/road-map-win-travel/src/img/three-crown.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Чолпон-Ата</p>
                 <p class="text-lg md:text-3xl">Три короны</p>
@@ -131,7 +131,7 @@
             </span>
         </div>
         <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
-            <img class="w-1/2 lg:w-36" src=/road-map-win-travel/src/img/logistich.webp" alt="">
+            <img class="w-1/2 lg:w-36" src="/road-map-win-travel/src/img/logistich.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Джети-Огуз</p>
                 <p class="text-lg md:text-3xl">Логистический центр</p>
@@ -162,22 +162,22 @@
             </span>
         </div>
         <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
-            <img class="w-1/2 lg:w-40" src=/road-map-win-travel/src/img/brdge.webp" alt="">
+            <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/brdge.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">село Барскаун</p>
                 <p class="text-lg md:text-3xl">Мост</p>
             </span>
         </div>
         <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between relative">
-            <img class="w-1/2 lg:w-40" src=/road-map-win-travel/src/img/airport.webp" alt="">
-            <img class="w-20 absolute right-10 bottom-24" src=/road-map-win-travel/src/img/sto.webp" alt="">
+            <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/airport.webp" alt="">
+            <img class="w-20 absolute right-10 bottom-24" src="/road-map-win-travel/src/img/sto.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">ПГТ Тамга</p>
                 <p class="text-lg md:text-3xl">СТО для самолетов</p>
             </span>
         </div>
         <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
-            <img class="w-1/2 lg:w-40" src=/road-map-win-travel/src/img/bar-bulak.webp" alt="">
+            <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/bar-bulak.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">село Барбулак</p>
                 <p class="hidden lg:block">Курортно оздоровительный центр</p>
@@ -185,7 +185,7 @@
             </span>
         </div>
         <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
-            <img class="w-1/2 lg:w-40" src=/road-map-win-travel/src/img/hes.webp" alt="">
+            <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/hes.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Джети-Огузский район</p>
                 <p class="text-lg md:text-3xl">ГЭС</p>
