--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             Дорожную карту Иссык-Куль
         </p>
     </div>
-    <img src="/road-map-win-travel/src/img/win.webp"  data-value="5" class="logo absolute left-0 right-0 top-1/2 lg:inset-0 w-1/2 lg:w-80 m-auto z-10" alt="">
+    <img src="/road-map-win-travel/src/img/win.webp"  data-value="5" class=" absolute left-0 right-0 top-1/2 lg:inset-0 w-1/2 lg:w-80 m-auto z-10" alt="">
     <div class="h-screen bg-black opacity-25 absolute inset-0 m-auto w-full z-0"></div> 
   </div>
   <div x-data="{ open: false }" class="p-5 lg:p-20 relative bg-gray-100">
@@ -88,41 +88,41 @@
     </div>
   </div>
   <div class="flex flex-wrap gap-12 items-center justify-center text-white bg-white p-12">
-        <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/airport.webp" alt="">
             <span class="w-full">
                 <p class="text-lg md:text-3xl">Аэропорт</p>
             </span>
         </div>
-        <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/bishkek.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Бишкек</p>
                 <p class="text-lg md:text-3xl">Мини мэр</p>
             </span>
         </div>
-        <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/boom.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Боомское ущелье</p>
                 <p class="text-lg md:text-3xl">Фуд-зона</p>
             </span>
         </div> 
-        <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-48" src="/road-map-win-travel/src/img/win-travel.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Элитный туристический комплекс</p>
                 <p class="text-lg md:text-3xl">Win Travel</p>
             </span>
         </div>
-        <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-48" src="/road-map-win-travel/src/img/three-crown.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Чолпон-Ата</p>
                 <p class="text-lg md:text-3xl">Три короны</p>
             </span>
         </div>
-        <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-36" src="/road-map-win-travel/src/img/arthur.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Каракол</p>
@@ -130,14 +130,14 @@
                 <p class="text-lg md:text-3xl">King Arthur</p>
             </span>
         </div>
-        <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-36" src="/road-map-win-travel/src/img/logistich.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Джети-Огуз</p>
                 <p class="text-lg md:text-3xl">Логистический центр</p>
             </span>
         </div>
-        <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/isa.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Тосор</p>
@@ -145,7 +145,7 @@
                 <p class="text-lg md:text-3xl">ISA-TIMUR</p>
             </span>
         </div>
-        <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/ethno.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">урочище Барскаун</p>
@@ -153,7 +153,7 @@
                 <p class="text-lg md:text-3xl">Барс Хан</p>
             </span>
         </div>
-        <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/edel.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">село Барскаун</p>
@@ -161,14 +161,14 @@
                 <p class="text-lg md:text-3xl">Эдельвейс</p>
             </span>
         </div>
-        <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/brdge.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">село Барскаун</p>
                 <p class="text-lg md:text-3xl">Мост</p>
             </span>
         </div>
-        <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between relative">
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between relative">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/airport.webp" alt="">
             <img class="w-20 absolute right-10 bottom-24" src="/road-map-win-travel/src/img/sto.webp" alt="">
             <span class="w-full">
@@ -176,7 +176,7 @@
                 <p class="text-lg md:text-3xl">СТО для самолетов</p>
             </span>
         </div>
-        <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/bar-bulak.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">село Барбулак</p>
@@ -184,7 +184,7 @@
                 <p class="text-lg md:text-3xl">Барбулак</p>
             </span>
         </div>
-        <div class="lot h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/hes.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Джети-Огузский район</p>
