--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <img class="w-1/2 lg:w-48" src="/road-map-win-travel/src/img/win-travel.webp" alt="">
             <span class="w-full">
                 <a href="/road-map-win-travel/src/docs/20га_с.pdf" target="_blank"><p class="hidden lg:block">Элитный туристический комплекс</p>
-                <p class="text-lg md:text-3xl">Win Travel</p>
+                  <p class="text-lg md:text-3xl">Win Travel</p></a>
             </span>
         </div>
         <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
