--- a/index.html
+++ b/index.html
@@ -108,28 +108,28 @@
                 <p class="text-lg md:text-3xl">Фуд-зона</p>
             </span>
         </div> 
-        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <a href="/road-map-win-travel/src/docs/20га_с.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-48" src="/road-map-win-travel/src/img/win-travel.webp" alt="">
             <span class="w-full">
-                <a href="/road-map-win-travel/src/docs/20га_с.pdf" target="_blank"><p class="hidden lg:block">Элитный туристический комплекс</p>
-                  <p class="text-lg md:text-3xl">Win Travel</p></a>
+                <p class="hidden lg:block">Элитный туристический комплекс</p>
+                  <p class="text-lg md:text-3xl">Win Travel</p>
             </span>
-        </div>
-        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        </div></a>
+        <a href="/road-map-win-travel/src/docs/Business plan three crowns_c.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-48" src="/road-map-win-travel/src/img/three-crown.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Чолпон-Ата</p>
                 <p class="text-lg md:text-3xl">Три короны</p>
             </span>
-        </div>
-        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        </div></a>
+        <a href="/road-map-win-travel/src/docs/Горнолыжная база_c.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-36" src="/road-map-win-travel/src/img/arthur.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Каракол</p>
                 <p class="hidden lg:block">Горнолыжная база</p>
                 <p class="text-lg md:text-3xl">King Arthur</p>
             </span>
-        </div>
+        </div></a>
         <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-36" src="/road-map-win-travel/src/img/logistich.webp" alt="">
             <span class="w-full">
@@ -145,14 +145,14 @@
                 <p class="text-lg md:text-3xl">ISA-TIMUR</p>
             </span>
         </div>
-        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <a href="/road-map-win-travel/src/docs/Барсхан_с.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/ethno.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">урочище Барскаун</p>
                 <p class="hidden lg:block">Этно-городок</p>
                 <p class="text-lg md:text-3xl">Барс Хан</p>
             </span>
-        </div>
+        </div></a>
         <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/edel.webp" alt="">
             <span class="w-full">
