--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
                 <p class="text-lg md:text-3xl">СТО для самолетов</p>
             </span>
         </div>
-        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <a href="/road-map-win-travel/src/docs/Бар-булак.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/bar-bulak.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">село Барбулак</p>
                 <p class="hidden lg:block">Курортно оздоровительный центр</p>
                 <p class="text-lg md:text-3xl">Барбулак</p>
             </span>
-        </div>
+        </div></a>
         <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/hes.webp" alt="">
             <span class="w-full">
