--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             </p>
     </div>
     <div x-show="open" class="fixed z-20 w-screen h-screen bg-[rgba(0,0,0,.7)] inset-0 flex items-center justify-center">
-        <iframe class="w-[80%] h-[80%] lg:w-[90%] lg:h-[90%]" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1516682.5905141376!2d76.78481764434486!3d42.058817038803795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38843c0984d22599%3A0x3afb294e4344a299!2z0JjRgdGB0YvQui3QmtGD0LvRjNGB0LrQsNGPINC-0LHQu9Cw0YHRgtGM!5e0!3m2!1sru!2skg!4v1661677226198!5m2!1sru!2skg" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe class="w-[80%] h-[80%] lg:w-[90%] lg:h-[90%]" src="https://www.google.com/maps/d/embed?mid=1jaiKgpTm7pvhblfN-eJsmbA83lAWY0o&ehbc=2E312F"></iframe>
+        <!-- <iframe class="w-[80%] h-[80%] lg:w-[90%] lg:h-[90%]" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1516682.5905141376!2d76.78481764434486!3d42.058817038803795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38843c0984d22599%3A0x3afb294e4344a299!2z0JjRgdGB0YvQui3QmtGD0LvRjNGB0LrQsNGPINC-0LHQu9Cw0YHRgtGM!5e0!3m2!1sru!2skg!4v1661677226198!5m2!1sru!2skg" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
         <div class="relative">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" @click="open = false" class="w-6 h-6 text-white absolute top-[-45vh] cursor-pointer right-[-3vw]">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
