--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <p class="text-lg md:text-3xl">Фуд-зона</p>
             </span>
         </div> 
-        <a href="/road-map-win-travel/src/docs/20га_с.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <a href="/road-map-win-travel/src/docs/ЭТК WIN-TRAVEL.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-48" src="/road-map-win-travel/src/img/win-travel.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Элитный туристический комплекс</p>
@@ -122,7 +122,7 @@
                 <p class="text-lg md:text-3xl">Три короны</p>
             </span>
         </div></a>
-        <a href="/road-map-win-travel/src/docs/Горнолыжная база_c.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <a href="/road-map-win-travel/src/docs/Горонолыжный курорт KING ARTHUR.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-36" src="/road-map-win-travel/src/img/arthur.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Каракол</p>
@@ -137,7 +137,7 @@
                 <p class="text-lg md:text-3xl">Логистический центр</p>
             </span>
         </div>
-        <a href="/road-map-win-travel/src/docs/isa.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <a href="/road-map-win-travel/src/docs/ЭТК ISA-TIMUR.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/isa.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Тосор</p>
@@ -145,7 +145,7 @@
                 <p class="text-lg md:text-3xl">ISA-TIMUR</p>
             </span>
         </div></a>
-        <a href="/road-map-win-travel/src/docs/Барсхан_с.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <a href="/road-map-win-travel/src/docs/Этно-городок Барс-Хан.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/ethno.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">урочище Барскаун</p>
@@ -176,7 +176,7 @@
                 <p class="text-lg md:text-3xl">СТО для самолетов</p>
             </span>
         </div>
-        <a href="/road-map-win-travel/src/docs/Бар-булак.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <a href="/road-map-win-travel/src/docs/Курортно-Оздоровительный Центр Бар-Булак.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/bar-bulak.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">село Барбулак</p>
