--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
                 <p class="text-lg md:text-3xl">Мини мэр</p>
             </span>
         </div>
-        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <a href="/road-map-win-travel/src/docs/Фуд-зона JIYU.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/boom.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Боомское ущелье</p>
                 <p class="text-lg md:text-3xl">Фуд-зона</p>
             </span>
-        </div> 
+        </div></a>
         <a href="/road-map-win-travel/src/docs/ЭТК WIN-TRAVEL.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-48" src="/road-map-win-travel/src/img/win-travel.webp" alt="">
             <span class="w-full">
