--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
                 <p class="text-lg md:text-3xl">Мини мэр</p>
             </span>
         </div>
+        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+            <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/bishkek.webp" alt="">
+            <span class="w-full">
+                <p class="hidden lg:block">Этно-парк</p>
+                <p class="hidden lg:block">Байтик</p>
+                <p class="text-lg md:text-3xl">ISA-TIMUR</p>
+            </span>
+        </div>
         <a href="/road-map-win-travel/src/docs/Фуд-зона JIYU.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/boom.webp" alt="">
             <span class="w-full">
