--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </span>
         </div>
         <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
-            <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/bishkek.webp" alt="">
+            <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/isa-baitik.png" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Этно-парк</p>
                 <p class="hidden lg:block">Байтик</p>
