--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
                 <p class="text-lg md:text-3xl">Аэропорт</p>
             </span>
         </div>
-        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <a href="/road-map-win-travel/src/docs/TIKA Мини-Мэр.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/bishkek.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Бишкек</p>
                 <p class="text-lg md:text-3xl">Мини мэр</p>
             </span>
-        </div>
+        </div></a>
         <a href="/road-map-win-travel/src/docs/Этно-парк ISA-TIMUR Байтик.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/isa-baitik.png" alt="">
             <span class="w-full">
