--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
                 <p class="text-lg md:text-3xl">King Arthur</p>
             </span>
         </div></a>
-        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <a href="/road-map-win-travel/src/docs/Сельское хозяйство.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-36" src="/road-map-win-travel/src/img/logistich.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">Джети-Огуз</p>
                 <p class="text-lg md:text-3xl">Логистический центр</p>
             </span>
-        </div>
+        </div></a>
         <a href="/road-map-win-travel/src/docs/ЭТК ISA-TIMUR.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/isa.webp" alt="">
             <span class="w-full">
