--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
     </div>
   </div>
   <div class="flex flex-wrap gap-12 items-center justify-center text-white bg-white p-12">
-        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <a href="/road-map-win-travel/src/docs/Аэропорт.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/airport.webp" alt="">
             <span class="w-full">
                 <p class="text-lg md:text-3xl">Аэропорт</p>
             </span>
-        </div>
+        </div></a>
         <a href="/road-map-win-travel/src/docs/TIKA Мини-Мэр.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/bishkek.webp" alt="">
             <span class="w-full">
@@ -176,14 +176,14 @@
                 <p class="text-lg md:text-3xl">Мост</p>
             </span>
         </div></a>
-        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between relative">
+        <a href="/road-map-win-travel/src/docs/Аэропорт.pdf#page=4" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between relative">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/airport.webp" alt="">
             <img class="w-20 absolute right-10 bottom-24" src="/road-map-win-travel/src/img/sto.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">ПГТ Тамга</p>
                 <p class="text-lg md:text-3xl">СТО для самолетов</p>
             </span>
-        </div>
+        </div></a>
         <a href="/road-map-win-travel/src/docs/Курортно-Оздоровительный Центр Бар-Булак.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/bar-bulak.webp" alt="">
             <span class="w-full">
