--- a/index.html
+++ b/index.html
@@ -201,6 +201,9 @@
             </span>
         </div></a>
     </div>
+    <div>
+        <p>Окупаемость проекта займет 3-4 года, до полного возврата вложенных инвестиционных средств, 70% доходных средств предприятия предоставить инвестору, 30% средств оставить для содержания отеля. После полной окупаемости разделить прибыль между инвестором и LLC Win-travel 50% на 50%/   Согласовать все организационные вопросы с инвестором.</p>
+    </div>
 </script>
 </body>
 </html> 
