--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
                 <p class="text-lg md:text-3xl">Барс Хан</p>
             </span>
         </div></a>
-        <div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
+        <a href="/road-map-win-travel/src/docs/Порт Эдельвейс.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-32" src="/road-map-win-travel/src/img/edel.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">село Барскаун</p>
                 <p class="hidden lg:block">Порт</p>
                 <p class="text-lg md:text-3xl">Эдельвейс</p>
             </span>
-        </div>
+        </div></a>
         <a href="/road-map-win-travel/src/docs/Мост.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
             <img class="w-1/2 lg:w-40" src="/road-map-win-travel/src/img/brdge.webp" alt="">
             <span class="w-full">
