--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <img class="w-20 absolute right-10 bottom-24" src="/road-map-win-travel/src/img/sto.webp" alt="">
             <span class="w-full">
                 <p class="hidden lg:block">ПГТ Тамга</p>
-                <p class="text-lg md:text-3xl">СТО для самолетов</p>
+                <p class="text-lg md:text-3xl">Авиационный сервисный центр</p>
             </span>
         </div></a>
         <a href="/road-map-win-travel/src/docs/Курортно-Оздоровительный Центр Бар-Булак.pdf" target="_blank"><div class=" h-40 w-40 md:h-80 p-5 md:w-80 bg-emerald-800 rounded-xl flex flex-col items-center justify-between">
